# firebolt-cpp-client

./: CHANGELOG.md  CMakeLists.txt  build.sh  package-lock.json
.github/: Dockerfile
.github/release/: package-lock.json  releaserc.json
.github/scripts/: mk-release-package.sh  run-api-test-app.sh
.github/workflows/: ci.yml
cmake/: version.cmake
docs/openrpc/: package.json
docs/openrpc/openrpc/: device.json  metrics.json  text_to_speech.json
docs/openrpc/the-spec/: firebolt-app-open-rpc.json  firebolt-open-rpc--legacy.json  firebolt-open-rpc.json
include/firebolt/: accessibility.h  common_types.h  device.h  discovery.h  firebolt.h  metrics.h  texttospeech.h  version.h.in
src/: device_impl.cpp  device_impl.h  discovery_impl.cpp  discovery_impl.h  firebolt.cpp  metrics_impl.cpp  metrics_impl.h  texttospeech_impl.cpp  texttospeech_impl.h
src/json_types/: jsondata_accessibility_types.h  jsondata_common.h  jsondata_device_types.h  jsondata_metrics_types.h  jsondata_texttospeech_types.h  lifecycle.h
test/: json_engine.h
test/api_test_app/: CMakeLists.txt  README.md  build.sh  main.cpp  test-suite.example  utils.cpp  utils.h
test/api_test_app/apis/: accessibilityDemo.cpp  accessibilityDemo.h  advertisingDemo.cpp  advertisingDemo.h  deviceDemo.cpp  deviceDemo.h  discoveryDemo.cpp  discoveryDemo.h  displayDemo.cpp  displayDemo.h  lifecycleDemo.cpp  lifecycleDemo.h  localizationDemo.cpp  localizationDemo.h  metricsDemo.cpp  metricsDemo.h  networkDemo.cpp  networkDemo.h  presentationDemo.cpp  presentationDemo.h  statsDemo.cpp  statsDemo.h  texttospeechDemo.cpp  texttospeechDemo.h
test/component/: accessibilityTest.cpp  deviceTest.cpp  discoveryTest.cpp  metricsTest.cpp  networkTest.cpp  presentationTest.cpp  textToSpeechTest.cpp
test/unit/: accessibilityTest.cpp  deviceTest.cpp  discoveryTest.cpp  lifecycleTest.cpp  metricsTest.cpp  mock_helper.h  textToSpeechTest.cpp
