# Copyright 2025 Comcast Cable Communications Management, LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

if (NOT CMAKE_PROJECT_NAME)
    cmake_minimum_required(VERSION 3.10)
    project(api-test-app CXX)

    # Read SYSROOT_PATH from environment if not set as CMake variable
    if (NOT SYSROOT_PATH AND DEFINED ENV{SYSROOT_PATH})
        set(SYSROOT_PATH $ENV{SYSROOT_PATH})
        message(STATUS "Using SYSROOT_PATH from environment: ${SYSROOT_PATH}")
    endif()

    if (CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
        set(CMAKE_INSTALL_PREFIX "${SYSROOT_PATH}/usr" CACHE INTERNAL "" FORCE)
    endif()

    # Add paths for finding installed packages
    if (SYSROOT_PATH)
        list(APPEND CMAKE_PREFIX_PATH
            "${SYSROOT_PATH}/usr/lib/cmake"
            "${SYSROOT_PATH}/usr/share/cmake"
        )
        list(APPEND CMAKE_MODULE_PATH
            "${SYSROOT_PATH}/usr/lib/cmake"
            "${SYSROOT_PATH}/usr/share/cmake"
            "${SYSROOT_PATH}/tools/cmake"
        )
    endif()

endif ()

set(API_TEST_APP api-test-app)

message("Setup ${API_TEST_APP}")

add_compile_options(-Wall -Wextra -Wpedantic)

file(GLOB SOURCES CONFIGURE_DEPENDS apis/*.cpp)

add_executable(${API_TEST_APP}
    main.cpp
    utils.cpp
    ${SOURCES}
)

if (ENABLE_DEMO_APP)
    target_link_libraries(${API_TEST_APP}
        PRIVATE
            FireboltClient
            nlohmann_json::nlohmann_json
    )
else()
    find_package(FireboltTransport CONFIG REQUIRED)
    find_package(FireboltClient CONFIG REQUIRED)
    target_link_libraries(${API_TEST_APP}
        PRIVATE
            FireboltTransport::FireboltTransport
            FireboltClient::FireboltClient
    )
endif()

target_include_directories(${API_TEST_APP}
    PRIVATE
        $<BUILD_INTERFACE:${CMAKE_BINARY_DIR}/src>
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../../src>
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/apis>
)

set_target_properties(${API_TEST_APP} PROPERTIES
    CXX_STANDARD 17
    CXX_STANDARD_REQUIRED YES
)

install(
    TARGETS ${API_TEST_APP}
    DESTINATION bin
)
